# eth-gas-2023-12

./: README.md  ape-config.yaml  pyproject.toml
notebook/: analysis.ipynb  gas.ipynb  query.ipynb
notebook/data/: blocks_18613329_18829329_50.csv
